<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_default"
        android:name="jp.ac.jec.cm0134.tavernavi.ui.defaultmain.DefaultFragment"
        android:label="@string/nav_default"
        tools:layout="@layout/fragment_navigation_default" />

    <fragment
        android:id="@+id/navigation_coupon"
        android:name="jp.ac.jec.cm0134.tavernavi.ui.defaultcoupon.CouponFragment"
        android:label="@string/nav_coupon"
        tools:layout="@layout/fragment_navigation_coupon" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="jp.ac.jec.cm0134.tavernavi.ui.defaultmap.MapFragment"
        android:label="@string/nav_map"
        tools:layout="@layout/fragment_navigation_map" />
</navigation>
