<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="146dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:background="@drawable/shape_fragment"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtGenre"
            android:textColor="@color/Cultured"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="4dp"
            android:gravity="center|right"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnGenre"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:background="@color/DarkSienna"
                android:text="@string/btnGenre"
                android:textColor="@color/Cultured"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/ivSelecter"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:src="@drawable/selecter" />
        </LinearLayout>

    </LinearLayout>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="100dp"
                    android:layout_height="75dp"
                    android:background="@color/DarkSienna"
                    android:scaleType="centerCrop"
                    android:src="@drawable/drink" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:gravity="bottom"
                    android:textColor="@color/Cultured"
                    android:textStyle="bold"
                    android:text="@string/genre_drink" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_weight="1">

                <ImageButton
                    android:id="@+id/imageButton2"
                    android:layout_width="100dp"
                    android:layout_height="75dp"
                    android:scaleType="centerCrop"
                    android:background="@color/DarkSienna"
                    android:src="@drawable/sushi" />
                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:gravity="bottom"
                    android:textColor="@color/Cultured"
                    android:textStyle="bold"
                    android:text="@string/genre_sushi" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_weight="1">

                <ImageButton
                    android:id="@+id/imageButton3"
                    android:layout_width="100dp"
                    android:layout_height="75dp"
                    android:scaleType="centerCrop"
                    android:background="@color/DarkSienna"
                    android:src="@drawable/meat" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:gravity="bottom"
                    android:text="@string/genre_meat"
                    android:textStyle="bold"
                    android:textColor="@color/Cultured" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_weight="1">

                <ImageButton
                    android:id="@+id/imageButton4"
                    android:layout_width="100dp"
                    android:layout_height="75dp"
                    android:scaleType="centerCrop"
                    android:background="@color/DarkSienna"
                    android:src="@drawable/ramen" />
                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:gravity="bottom"
                    android:textColor="@color/Cultured"
                    android:textStyle="bold"
                    android:text="@string/genre_ra_men" />
            </RelativeLayout>
        </LinearLayout>
    </HorizontalScrollView>

</LinearLayout>