<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="225dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:padding="20dp"
    android:background="@drawable/shape_fragment">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/txtSearch"
        android:textColor="@color/Cultured"
        android:textSize="25sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivArea"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/pin2" />

        <Spinner
            android:id="@+id/areaSpinner"
            android:layout_width="120dp"
            android:layout_height="25dp"
            android:layout_marginStart="4dp"
            android:background="@drawable/shape_spinner"
            android:spinnerMode="dialog" />

        <ImageView
            android:id="@+id/ivRadius"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="28dp"
            android:src="@drawable/rader" />

        <Spinner
            android:id="@+id/radiusSpinner"
            android:layout_width="120dp"
            android:layout_height="25dp"
            android:layout_marginStart="4dp"
            android:background="@drawable/shape_spinner"
            android:spinnerMode="dialog" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivBudget"
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:src="@drawable/money" />

        <Spinner
            android:id="@+id/minBudgetSpinner"
            android:layout_width="100dp"
            android:layout_height="25dp"
            android:layout_marginStart="4dp"
            android:background="@drawable/shape_spinner"
            android:spinnerMode="dialog" />

        <Spinner
            android:id="@+id/maxBudgetSpinner"
            android:layout_width="100dp"
            android:layout_height="25dp"
            android:layout_marginStart="4dp"
            android:background="@drawable/shape_spinner"
            android:spinnerMode="dialog" />

        <ImageView
            android:id="@+id/ivDay"
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:src="@drawable/day" />

        <Spinner
            android:id="@+id/daySpinner"
            android:layout_width="56dp"
            android:layout_height="25dp"
            android:layout_marginStart="4dp"
            android:background="@drawable/shape_spinner"
            android:spinnerMode="dialog" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <CheckBox
            android:id="@+id/card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/checkBox1"
            android:textColor="@color/Cultured"
            android:textColorHint="@color/Cultured"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/eMoney"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/checkBox2"
            android:textColor="@color/Cultured"
            android:textSize="18sp" />
    </LinearLayout>

    <Button
        android:id="@+id/searchButton"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:background="@drawable/shape_button"
        android:text="@string/btnSearch"
        android:textSize="20sp"
        android:textStyle="bold" />


</LinearLayout>